@@ -124,49 +124,49 @@
 </geist:Object>
 <geist:Object X="245" Y="67" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="261" Y="67" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="279" Y="64" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="256" Y="74" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="268" Y="75" W="25" H="23" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="281" Y="77" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="245" Y="79" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
@@ -187,7 +187,7 @@
 </geist:Object>
 <geist:Object X="266" Y="98" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
@@ -201,56 +201,56 @@
 </geist:Object>
 <geist:Object X="233" Y="76" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="250" Y="93" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="226" Y="87" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="229" Y="100" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="240" Y="90" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="244" Y="103" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="257" Y="103" W="21" H="26" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
 </geist:Object>
 <geist:Object X="399" Y="54" W="56" H="63" Alias="1" Visible="16" Colormod_A="100" Colormod_R="100" Colormod_G="100" Colormod_B="100">
 <geist:Type>Image</geist:Type>
-<geist:Name>Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of Copy of mush.png</geist:Name>
+<geist:Name>Copy of mush.png</geist:Name>
 <geist:Sizemode>Zoom</geist:Sizemode>
 <geist:Alignment>Center Both</geist:Alignment>
 <geist:Filename>/usr/local/share/geist/images/mush.png</geist:Filename>
